--- a/vaccineSite/user/templates/user/physician_appointments_add.html
+++ b/vaccineSite/user/templates/user/physician_appointments_add.html
@@ -57,7 +57,7 @@
 
             <button onClick="window.location='/user/logout';" type="button">Sign out</button>
             <button onClick="window.location='/user/physician/profile';" type="button">Profile</button>
-            <button onClick="window.location='/user/physician/appointments';" type="button">Appointments</button>
+            <button onClick="window.location='/user/physician/appointments';" type="button">Available Appointments</button>
             <button onClick="window.location='/user/physician';" type="button">Home</button>
         </h1>
 
