--- a/vaccineSite/user/templates/user/patient_appointments_r.html
+++ b/vaccineSite/user/templates/user/patient_appointments_r.html
@@ -58,36 +58,44 @@
             <button onClick="window.location='/user/logout';" type="button">Sign out</button>
             <button onClick="window.location='/user/patient/profile';" type="button">Profile</button>
             <button onClick="window.location='/user/patient/appointments/my';" type="button">My Appointments</button>
-            <button onClick="window.location='/user/patient/appointments';" type="button">Book Appointments</button>
+            <button onClick="window.location='/user/patient';" type="button">Home</button>
         </h1>
         <h2>
-            Main Page
+            Available Appointments:
+            <button onClick="window.location='/user/patient/appointments/d';">
+                Dose
+            </button>
+            <button onClick="window.location='/user/patient/appointments/r';">
+                Most Recent
+            </button>
+            <button onClick="window.location='/user/patient/appointments/v';">
+                Vaccine Type
+            </button>
+
         </h2>
         <ul>
             {% for appointment in object_list %}
-            {% if appointment.patient == user.patient %}
 
-            <li><b>Current Physician:</b> {{ appointment.currphysician }}</li>
+            <li><b>Appointment ID:</b> {{ appointment.id }}</li>
+            <li><b>Current Physician:</b> {{ appointment.physician }}</li>
             <li><b>Patient:</b> {{ appointment.patient }}</li>
-            <li><b>Vaccine Name:</b> {{ appointment.vaccineName.vaccine_id }}</li>
-            <li><b>Start Time:</b> {{ appointment.startTime }}</li>
-            <li><b>End Time:</b> {{ appointment.endTime }}</li>
+            <li><b>Vaccine Name:</b> {{ appointment.vaccine_name.brand }}</li>
+            <li><b>Vaccine Name:</b> {{ appointment.vaccine_name.vaccine_id }}</li>
+            <li><b>Start Time:</b> {{ appointment.start_time  }}</li>
+            <li><b>End Time:</b> {{ appointment.end_time }}</li>
             <li><b>Dose:</b> {{ appointment.dose }}</li>
+
+
+            <button onClick="window.location='/user/patient/appointments/{{ appointment.id }}';" style="float: left;" type="button">Sign up</button>
             <br />
             <br />
             <br />
             <br />
-            {% endif %}
+
             {% empty %}
-            <li></li>
+            <li>No appointments available.</li>
             {% endfor %}
         </ul>
-        <!--    <p>Start time: {{ object.StartTime }}</p>-->
-        <!--    <p>End time: {{ object.EndTime }}</p>-->
-        <!--    <form method="post">-->
-        <!--    {% csrf_token %}-->
-        <!--    {{ form.as_p }}-->
-        <!--    </form>-->
     </div>
 </body>
 </html>
