--- a/vaccineSite/user/templates/user/physician.html
+++ b/vaccineSite/user/templates/user/physician.html
@@ -6,7 +6,7 @@
     <style>
         body {
             background-image: url("https://upload.wikimedia.org/wikipedia/commons/9/91/Doctor_with_Nurse_Cartoon.svg");
-            background-size: 100%;
+            background-size: 105%;
         }
     </style>
 </head>
@@ -57,8 +57,8 @@
 
             <button onClick="window.location='/user/logout';" type="button">Sign out</button>
             <button onClick="window.location='/user/physician/profile';" type="button">Profile</button>
-            <button onClick="window.location='/user/physician/appointments';" type="button">Appointments</button>
-            <button onClick="window.location='/user/physician';" type="button">Home</button>
+            <button onClick="window.location='/user/physician/appointments/my';" type="button">My Appointments</button>
+            <button onClick="window.location='/user/physician/appointments';" type="button">Available Appointments</button>
         </h1>
         <h2>
             Main Page
