--- a/vaccineSite/user/templates/user/physician_appointments.html
+++ b/vaccineSite/user/templates/user/physician_appointments.html
@@ -57,7 +57,7 @@
 
             <button onClick="window.location='/user/logout';" type="button">Sign out</button>
             <button onClick="window.location='/user/physician/profile';" type="button">Profile</button>
-            <button onClick="window.location='/user/physician/appointments';" type="button">Appointments</button>
+            <button onClick="window.location='/user/physician/appointments/my';" type="button">My Appointments</button>
             <button onClick="window.location='/user/physician';" type="button">Home</button>
         </h1>
         <h2>
@@ -81,13 +81,17 @@
             <li><b>Start Time:</b> {{ appointment.start_time  }}</li>
             <li><b>End Time:</b> {{ appointment.end_time }}</li>
             <li><b>Dose:</b> {{ appointment.dose }}</li>
-            
+
+
             <button onClick="window.location='/user/physician/appointments/{{ appointment.id }}';" set style="float: left;" type="button">Sign Up</button>
-            
-            
+            <br />
+            <br />
+            <br />
+            <br />
+
             {% empty %}
             <li>No appointments available.</li>
-            {% endfor %}            
+            {% endfor %}
         </ul>
 
         
