--- a/vaccineSite/user/templates/user/patient_appointments_my.html
+++ b/vaccineSite/user/templates/user/patient_appointments_my.html
@@ -57,6 +57,7 @@
 
             <button onClick="window.location='/user/logout';" type="button">Sign out</button>
             <button onClick="window.location='/user/patient/profile';" type="button">Profile</button>
+            <button onClick="window.location='/user/patient/appointments/my';" type="button">My Appointments</button>
             <button onClick="window.location='/user/patient/appointments';" type="button">Book Appointments</button>
             <button onClick="window.location='/user/patient';" type="button">Home</button>
         </h1>
