--- a/vaccineSite/user/templates/user/patient_profile.html
+++ b/vaccineSite/user/templates/user/patient_profile.html
@@ -56,7 +56,9 @@
             Patient Portal
 
             <button onClick="window.location='/user/logout';" type="button">Sign out</button>
-            <button onClick="window.location='/user/patient/appointments';" type="button">Appointments</button>
+            <button onClick="window.location='/user/patient/profile';" type="button">Profile</button>
+            <button onClick="window.location='/user/patient/appointments/my';" type="button">My Appointments</button>
+            <button onClick="window.location='/user/patient/appointments';" type="button">Book Appointments</button>
             <button onClick="window.location='/user/patient';" type="button">Home</button>
         </h1>
         <h2>
