--- a/vaccineSite/user/templates/user/patient.html
+++ b/vaccineSite/user/templates/user/patient.html
@@ -59,6 +59,7 @@
             <button onClick="window.location='/user/patient/profile';" type="button">Profile</button>
             <button onClick="window.location='/user/patient/appointments/my';" type="button">My Appointments</button>
             <button onClick="window.location='/user/patient/appointments';" type="button">Book Appointments</button>
+            <button onClick="window.location='/user/patient';" type="button">Home</button>
         </h1>
         <h2>
             Main Page
