--- a/vaccineSite/user/templates/user/physician_appointments.html
+++ b/vaccineSite/user/templates/user/physician_appointments.html
@@ -58,6 +58,7 @@
             <button onClick="window.location='/user/logout';" type="button">Sign out</button>
             <button onClick="window.location='/user/physician/profile';" type="button">Profile</button>
             <button onClick="window.location='/user/physician/appointments/my';" type="button">My Appointments</button>
+            <button onClick="window.location='/user/physician/appointments';" type="button">Available Appointments</button>
             <button onClick="window.location='/user/physician';" type="button">Home</button>
         </h1>
         <h2>
